Fix the nav menu bar spacing

--- a/src/styles/Nav.module.scss
+++ b/src/styles/Nav.module.scss
@@ -11,8 +11,18 @@
     color: $on-background-color;
     height: 60px;
 
+    ul {
+        display: flex;
+        gap: 0.5rem;
+    }
+    
+    .auth {
+        padding-right: 1rem;
+    }
+
     .nav__left {
         display: flex;
+        gap: 3rem;
         align-items: center;
 
         .logo {
@@ -23,15 +33,6 @@
                 font-weight: 800;
             }
         }
-
-        .menu {
-            margin: 0 0 0 1rem;
-
-            li {
-                width: 7rem;
-                padding: 0 0.5rem;
-            }
-        }
     }
 
     li {
@@ -39,9 +40,8 @@
         line-height: 60px;
         font-size: 0.9rem;
         display: inline-block;
-        padding: 0 1rem;
-        width: 6rem;
         text-align: center;
+        padding-inline: 1rem;
         
         &:hover {
             background-color: $primary-color-800;
